[package]
description = "A web-based virtual tabletop for D&D written in Rust."
edition = "2021"
license = "MIT"
name = "vtable-backend"
repository = "https://github.com/ewilden2017/virtualtable/"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.0", features = ["attributes"]}
lazy_static = "1.4.0"
log = {version = "0.4.14", features = ["kv_unstable_std"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
tide = "0.16.0"
tide-websockets = "0.4.0"
toml = "0.5.8"
