[package]
description = "A web-based virtual tabletop for D&D written in Rust."
edition = "2021"
license = "MIT"
name = "vtable-web"
repository = "https://github.com/ewilden2017/virtualtable/"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = ">= 0.1.6", optional = true}
js-sys = ">= 0.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
vtable-common = {path = "../vtable-common"}
wasm-bindgen = ">= 0.2.63"
wee_alloc = {version = ">= 0.4.5", optional = true}

[dependencies.web-sys]
features = [
  "console",
]
version = ">= 0.3"

[dev-dependencies]
wasm-bindgen-test = ">= 0.3.13"

[profile.release]
# Optimize for small code size.
opt-level = "s"
